webook/webook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webook-deployment
  labels:
    app: webook
spec:
  # 需要创建 3 个pods
  replicas: 3
  # 根据 label 来匹配 pods
  selector:
    matchLabels:
      app: webook
  template:
    metadata:
      # 需要跟上面的 selector 中的 matchLabels 一致
      labels:
        app: webook
    spec:
      containers:
      - name: webook
        image: riiceball/webook:v0.0.1
        ports:
        # 需要与程序中的 port 相同
        - containerPort: 8080
