webook/webook-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis-service
spec:
  selector:
    app: webook-redis
  ports:
  - name: redis
    protocol: TCP
    # 外部直接访问这个端口，nodePort 必须在 30000-32767 之间
    nodePort: 31379
    # k8s 内部访问端口
    port: 6380
    # pod 暴露的端口
    targetPort: 6379
  type: NodePort
