webook/webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-service
spec:
  selector:
    # 需要和 pods 的 lable 匹配
    app: webook
  ports:
  # 名字随意
  - name: http
    protocol: TCP
    port: 98
    targetPort: 8081
  # 负载均衡
  type: ClusterIP
